DPO-2268 Matomo-skriptin lisäys käyttöliittymiin

--- a/train-history-web/src/index.html
+++ b/train-history-web/src/index.html
@@ -10,6 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Matomo Tag Manager -->
+  <script src="https://www.digitraffic.fi/js/statistics.js"
+          integrity="sha384-k6gKhsa3tMzNzk45V5l2SP/e6wzRx0TVZbZCllbGEL6086JDKXvHTHIQbsS3czdW"
+          crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
