--- a/train-history-web/src/index.html
+++ b/train-history-web/src/index.html
@@ -11,9 +11,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Matomo Tag Manager -->
-  <script src="https://www.digitraffic.fi/js/statistics.js"
-          integrity="sha384-k6gKhsa3tMzNzk45V5l2SP/e6wzRx0TVZbZCllbGEL6086JDKXvHTHIQbsS3czdW"
-          crossorigin="anonymous"></script>
+  <script>
+    function cacheParam() {
+      function pad(number) {
+        if (number < 10) {
+          return '0' + number;
+        }
+        return number;
+      }
+      var now = new Date();
+      return (
+        now.getUTCFullYear() +
+        '-' +
+        pad(now.getUTCMonth() + 1) +
+        '-' +
+        pad(now.getUTCDate()) +
+        '-' +
+        pad(now.getUTCHours() + 1)
+      );
+    }
+    var _mtm = window._mtm = window._mtm || [];
+    _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/fintraffic.matomo.cloud/container_70Mrsp3P.js?c='+cacheParam(); s.parentNode.insertBefore(g,s);
+  </script>
+  <!-- End Matomo Tag Manager -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
